[tool.poetry]
name = "vana"
version = "0.46.0"
description = ""
authors = ["Tim Nunamaker <tim@vana.com>", "Volodymyr Isai <volod@vana.com>", "Kahtaf Alam <kahtaf@vana.com>"]
readme = "README.md"
repository = "https://github.com/vana-com/vana-framework"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
munch = "^4.0.0"
aiohttp = "^3.9.5"
colorama = "^0.4.6"
python-statemachine = "^2.2.0"
retry = "^0.9.2"
ansible-vault = "^2.1.0"
ansible = "^9.5.1"
password-strength = "^0.0.3.post2"
rich = "^13.7.1"
netaddr = "^1.2.1"
web3 = "^6.18.0"
shtab = "^1.7.1"
pynacl = "^1.5.0"
eth-abi = "^5.1.0"
tomli = "^2.1.0"


[build-system]
requires = ["poetry-core", "setuptools>=42", "wheel", "tomli>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vanacli = "vana.cli:main"
